toolkits/global/packages/global-article/scss/50-components/article-enhanced.scss
/* ... */
.c-article-correspondence__title {
	line-height: 1.4;
	margin-bottom: $article--vertical-spacing-medium;
}

.c-article-correspondence__article {
	font-family: $font-family-serif;
	margin-bottom: $article--vertical-spacing-large;
}

.c-article-correspondence__back-to-article {
	font-family: $font-family-serif;
	margin-bottom: $article--vertical-spacing-medium;

	&--link {
		font-weight: 700;
	}
}

.c-article-correspondence__alert {
	background-color: map-get($article--grey-palette, 'grey-5');
	border: 1px solid map-get($article--grey-palette, 'grey-3');
	margin-bottom: 20px;
	padding: 20px;

	&--error {
		background-color: #fcecec;
		border-color: #930721;
	}
}

.c-article-correspondence-form {
	margin-right: 3.2%;
	width: 100%;

	&__fieldset {
		width: 100%;
		border: 0;
	}
}

.c-article-correspondence-form__container {
	margin-bottom: 40px;

	&--small {
		float: left;
		margin-right: 3.2%;
		width: 48.4%;

		@include media-query(map-get($article--breakpoints, 'med'), 'max') {
			width: 100%;
		}
	}

	&--last {
		margin-right: 0;
	}

	&--clear {
		clear: both;
	}

	&--narrow {
		margin-bottom: 20px;
	}

	&--center {
		text-align: center;
	}
}

.c-article-correspondence-form__label {
	font-weight: 700;

	&--required {
		border-bottom: none;
		color: #b12206;
		padding-right: 4px;
		text-decoration: none;
	}
}

.c-article-correspondence-form__input {
	border: 1px solid map-get($article--grey-palette, 'grey-5');
	color: map-get($article--grey-palette, 'grey-1');
	padding: 10px;
	line-height: 1.25;
	box-sizing: border-box;
	transition: background-color .3s ease-in;
	width: 100%;

	&--textarea {
		height: 200px;
	}
}

.c-article-correspondence-form__submit {
	border: 1px solid $article--link-color;
	background: $article--link-color;
	box-sizing: content-box;
	color: white;
	display: block;
	line-height: 1.5;
	min-width: auto;
	padding: $article--vertical-spacing-small 20px;
	text-align: center;
	transition: background-color .2s ease-out, color .2s ease-out;
	width: auto;
}

.c-pan-zoom-controls {
	text-align: center;
	background: $article--box-color;
	border-bottom: 6px solid $article--box-color;
	padding: $article--vertical-spacing-small 10px;

	ul {
		list-style: none;
		display: inline-flex;
		margin: 0;
		padding: 0;
	}

	li {
		border-left: 1px solid white;
		padding: 4px;
	}

	li:first-child {
		border-left: none;
	}

	button {
		border: none;
		padding: 0 10px;
		background-color: transparent;
		color: $article--link-color;
	}

	button:hover,
	button:focus {
		text-decoration: underline;
	}
}

.c-pan-zoom-controls__zoom-in,
.c-pan-zoom-controls__zoom-out {
	button {
		background-repeat: no-repeat;
		background-position: 50% 50%;
		background-size: 16px auto;
		width: 16px;
		height: 16px;
		padding: 4px 20px;
	}
}

.c-pan-zoom-controls__zoom-in {
	button {
		background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20width%3D'16'%20height%3D'16'%20viewBox%3D'0%200%2016%2016'%3E%3Cpath%20fill%3D'%23#{$article--link-icon-color}'%20d%3D'M6%200h4v16h-4v-16zm-6%206h16v4h-16v-4z'%2F%3E%3C%2Fsvg%3E");
	}
}

.c-pan-zoom-controls__zoom-out {
	button {
		background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20width%3D'16'%20height%3D'16'%20viewBox%3D'0%200%2016%2016'%3E%3Cpath%20fill%3D'%23#{$article--link-icon-color}'%20d%3D'M0%206h16v4h-16v-4z'%2F%3E%3C%2Fsvg%3E");
	}
}

.c-article-equation {
	margin-bottom: $article--vertical-spacing-large;
	position: relative;
	width: 100%;
	display: table;
	table-layout: fixed;

	.MathJax_Display > .MathJax {
		display: block !important;
		max-width: 100%;
		overflow-x: auto;
		overflow-y: hidden;
	}

	#MathJax_Zoom {
		background-color: #f7fbfe; // tbd
		border: 1px solid #97bfd8; // tbd
		border-radius: 2px;
		box-shadow: 0 0 5px 2px rgba(51, 51, 51, .2);
	}

	&__content {
		display: block;
		text-align: left;
		vertical-align: middle;

		@include media-query(map-get($article--breakpoints, 'med')) {
			display: table-cell;
			width: 90%;
		}

		> .MathJax {
			display: block !important;
			max-width: 100%;
			overflow-x: auto;
			overflow-y: hidden;
		}
	}

	&__number {
		display: block;
		font-family: $font-family-sans;
		text-align: left;
		vertical-align: middle;
		margin: 12px 0 16px;

		@include media-query(map-get($article--breakpoints, 'med')) {
			display: table-cell;
			width: 10%;
			white-space: nowrap;
			text-align: right;
			padding-left: 16px;
		}
	}
}

.mathjax-tex .MathJax {
	display: inline-block;
	overflow: auto;
	max-width: 100%;
}

.c-article-equation__number {
	min-width: 35px;
}

.c-article-body {
	clear: both;
}

.c-article-body p,
.c-article-body a {
	word-wrap: break-word;
}

.c-article-body a {
	word-break: break-word;
}

.c-article-extras {
	width: 31.2%;
	float: left;

	@include media-query(map-get($article--breakpoints, 'med'), 'max') {
		display: none;
	}
}

.c-reading-companion {
	clear: both;
}

.c-reading-companion__heading {
	font-family: $font-family-sans;
	font-size: map-get($article--font-sizes, 'font-size-3');
	font-weight: bold;
	padding: 0 $article--vertical-spacing-medium $article--vertical-spacing-small;
	margin: 0;
}

.c-reading-companion__sticky {
	width: 100%;
	max-width: 582px;

	&--stuck {
		margin: 0 0 $article--vertical-spacing-medium;
		position: fixed;
		top: 50px;
	}
}

.c-reading-companion__scroll-pane {
	overflow-x: hidden;
	overflow-y: auto;
	margin: 0 0 $article--vertical-spacing-medium;
	max-height: calc(100vh - 100px);
}

.c-reading-companion__tabs {
	font-size: map-get($article--font-sizes, 'font-size-3');
	list-style: none;
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	margin: 0 0 $article--vertical-spacing-small;
	padding: 0;

	> li {
		flex-grow: 1;
	}
}
/* ... */

